# gstack

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  ram.c  ram.h  stack.c  stack.h  types.h  vm.c  vm.h
